--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+# application properties
+spring.datasource.url=jdbc:postgresql://ep-broad-grass-40290943-pooler.us-east-1.postgres.vercel-storage.com:5432/verceldb
+spring.datasource.username=default
+spring.datasource.password=o53zPTNwAiaG
+spring.datasource.driver-class-name=org.postgresql.Driver
