Feat: Create a DataSeeder class to populate the remote DB if there isn't any data in it already.  Test and make it functions correctly.

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.datasource.url=jdbc:postgresql://ep-broad-grass-40290943-pooler.us-east-1
 spring.datasource.username=default
 spring.datasource.password=o53zPTNwAiaG
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
