--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,4 +3,5 @@ spring.datasource.url=jdbc:postgresql://ep-broad-grass-40290943-pooler.us-east-1
 spring.datasource.username=default
 spring.datasource.password=o53zPTNwAiaG
 spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
