Setup project for local development.

--- a/frontend/portfolio-app/package.json
+++ b/frontend/portfolio-app/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-app",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://frozen-dusk-55881-7ff3d5645692.herokuapp.com",
+  "proxy": "http://localhost:8080",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
