--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,13 +1,18 @@
 # application properties
-spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+#spring.datasource.url=jdbc:postgresql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+#spring.datasource.username=${DB_USERNAME}
+#spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/mydb
+spring.datasource.username=postgres
+spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=${MY_EMAIL}
-spring.mail.password=${EMAIL_PASSWORD}
+#spring.mail.username=${MY_EMAIL}
+#spring.mail.password=${EMAIL_PASSWORD}
+spring.mail.username=olsonja88@gmail.com
+spring.mail.password=kimjpcmthhowdmac
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
